@@ -24,7 +24,6 @@ import java.security.PrivilegedAction;
 import java.util.Enumeration;
 
 import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.osgi.framework.Bundle;
 import org.springframework.util.Assert;
 import org.springframework.util.ObjectUtils;
@@ -44,7 +43,7 @@ import org.springframework.util.ObjectUtils;
  */
 public class BundleDelegatingClassLoader extends ClassLoader {
 
-	private static final Log log = LogFactory.getLog(BundleDelegatingClassLoader.class);
+	private static final Log log = LogUtils.createLogger(BundleDelegatingClassLoader.class);
 
 	private final ClassLoader bridge;
 
